git-ops/infra/sealed-secrets-web/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sealed-secrets-web-ingress
  namespace: sealed-secrets-web
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "61.77.247.3/32"
    # 만약 ingress-nginx 가 기본으로 https 리다이렉트 한다면 이거 추가
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx

  # ⛔ tls 블록 전체 삭제
  tls:
    - hosts:
        - sealed-secrets.archainia.app
      secretName: archainia-wildcard-tls

  rules:
    - host: sealed-secrets.archainia.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sealed-secrets-web
                port:
                  number: 80
